# sandbox.iot.coap

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
cpp/: .gitignore  CMakeLists.txt
cpp/test/: CMakeLists.txt
cpp/test/lib/: CMakeLists.txt
cpp/test/lib/cantcoap/: CMakeLists.txt
cpp/test/lib/googletest/: CMakeLists.txt
cpp/test/src/: CMakeLists.txt  test.cpp
embedded/: CMakeLists.txt
embedded/espressif/: CMakeLists.txt
embedded/espressif/esp32/: .gitignore  CMakeLists.txt
embedded/espressif/esp32/esp-idf/: README.md  setup.sh
embedded/espressif/esp32/freertos/: .gitignore  README.md  setup.sh
embedded/espressif/esp32/libcoap/: CMakeLists.txt
embedded/espressif/esp32/luanode/: CMakeLists.txt
embedded/espressif/esp32/toolchain/: esp32.cmake
java/: pom.xml
node/: package.json
node/examples/: json.js  proxy.js
node/ikea_tradfri/: authenticate.js  discover.js  get_information.js  index.js  package.json  switch_bulb.js
node/ikea_tradfri/node-coap-client/: dim_bulb.js  pulse_bulb.js  switch_bulb.js
node/ikea_tradfri/node-tradfri/: devices.js  dim_bulb.js  pulse_bulb.js  switch_bulb.js
node/ikea_tradfri/node-tradfri-client/: authenticate.js
node/test/: coap.js
script/: x86_64-linux-gnu.sh  xtensa-esp32-elf.sh
script/ikea_tradfri/: dim_bulb.sh  get_identity.sh  get_information.sh  switch_bulb.sh
test/: coap.js
toolchain/: xtensa-esp32-elf.cmake
